syntax = "proto3";

package cybersecurity.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";

// Language bindings / codegen options
option go_package = "github.com/aethernova/cybersecurity-core/gen/proto/cybersecurity/v1;cybersecurityv1";
option java_multiple_files = true;
option java_package = "app.aethernova.cybersecurity.v1";
option java_outer_classname = "CybersecurityProtoV1";
option csharp_namespace = "Aethernova.Cybersecurity.V1";
option php_namespace = "Aethernova\\Cybersecurity\\V1";
option objc_class_prefix = "AECS";
option ruby_package = "Aethernova::Cybersecurity::V1";

// -----------------------------------------------------------------------------
// Common enums
// -----------------------------------------------------------------------------

enum Severity {
  SEVERITY_UNSPECIFIED = 0;
  SEVERITY_INFO        = 1;
  SEVERITY_LOW         = 2;
  SEVERITY_MEDIUM      = 3;
  SEVERITY_HIGH        = 4;
  SEVERITY_CRITICAL    = 5;
}

enum Confidence {
  CONFIDENCE_UNSPECIFIED = 0;
  CONFIDENCE_LOW         = 1;
  CONFIDENCE_MEDIUM      = 2;
  CONFIDENCE_HIGH        = 3;
}

enum Verdict {
  VERDICT_UNSPECIFIED = 0;
  VERDICT_UNKNOWN     = 1;
  VERDICT_BENIGN      = 2;
  VERDICT_SUSPICIOUS  = 3;
  VERDICT_MALICIOUS   = 4;
}

enum Action {
  ACTION_UNSPECIFIED = 0;
  ACTION_NO_ACTION   = 1;
  ACTION_ALERT_ONLY  = 2;
  ACTION_ALLOW       = 3;
  ACTION_BLOCK       = 4;
  ACTION_QUARANTINE  = 5;
  ACTION_KILL_PROCESS= 6;
  ACTION_ISOLATE_HOST= 7;
}

enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_NETWORK_FLOW= 1;
  EVENT_TYPE_DNS         = 2;
  EVENT_TYPE_HTTP        = 3;
  EVENT_TYPE_TLS         = 4;
  EVENT_TYPE_PROCESS     = 5;
  EVENT_TYPE_FILE        = 6;
  EVENT_TYPE_AUTH        = 7;
  EVENT_TYPE_K8S_AUDIT   = 8;
  EVENT_TYPE_CLOUD_AUDIT = 9;
  EVENT_TYPE_OTHER       = 10;
}

enum IpProtocol {
  IP_PROTOCOL_UNSPECIFIED = 0;
  IP_PROTOCOL_TCP         = 6;
  IP_PROTOCOL_UDP         = 17;
  IP_PROTOCOL_ICMP        = 1;
  IP_PROTOCOL_ICMPV6      = 58;
  IP_PROTOCOL_SCTP        = 132;
}

// IOC types for Threat Intel
enum IocType {
  IOC_TYPE_UNSPECIFIED = 0;
  IOC_IP               = 1;
  IOC_IPV6             = 2;
  IOC_DOMAIN           = 3;
  IOC_URL              = 4;
  IOC_EMAIL            = 5;
  IOC_FILE_MD5         = 6;
  IOC_FILE_SHA1        = 7;
  IOC_FILE_SHA256      = 8;
  IOC_REGEXP           = 9;
}

// Cloud provider
enum CloudProvider {
  CLOUD_PROVIDER_UNSPECIFIED = 0;
  CLOUD_AWS                  = 1;
  CLOUD_GCP                  = 2;
  CLOUD_AZURE                = 3;
  CLOUD_OTHER                = 4;
}

// Direction for network flow
enum Direction {
  DIRECTION_UNSPECIFIED = 0;
  DIRECTION_INBOUND     = 1;
  DIRECTION_OUTBOUND    = 2;
  DIRECTION_LATERAL     = 3;
}

// -----------------------------------------------------------------------------
// Common structures
// -----------------------------------------------------------------------------

message Principal {
  string user          = 1;
  string uid           = 2;
  string session_id    = 3;
  repeated string roles= 4;
}

message GeoIp {
  string country_iso   = 1;  // e.g. "SE"
  string city          = 2;
  uint32 asn           = 3;
  string as_org        = 4;
  google.protobuf.DoubleValue latitude  = 5;
  google.protobuf.DoubleValue longitude = 6;
}

message NetworkEndpoint {
  string ip            = 1;
  google.protobuf.UInt32Value port = 2;
  string mac           = 3;
  string hostname      = 4;
  GeoIp geo            = 5;
  repeated string labels = 6; // arbitrary endpoint labels
}

message FileHash {
  string md5           = 1;
  string sha1          = 2;
  string sha256        = 3;
}

message FileInfo {
  string path          = 1;
  uint64 size_bytes    = 2;
  string mime_type     = 3;
  FileHash hash        = 4;
  string owner         = 5;
  google.protobuf.BoolValue executable = 6;
}

message ProcessInfo {
  uint64 pid           = 1;
  uint64 ppid          = 2;
  string name          = 3;
  string exe           = 4;
  string cmdline       = 5;
  string user          = 6;
  string cwd           = 7;
  FileHash hash        = 8;      // hash of exe image if known
  google.protobuf.Timestamp start_time = 9;
  map<string, string> attributes = 10; // extra process attrs
}

message MitreAttack {
  // tactic names (e.g., "Execution", "Persistence")
  repeated string tactics        = 1;
  // technique IDs (e.g., "T1059", "T1204.002")
  repeated string technique_ids  = 2;
  map<string, string> context    = 3; // arbitrary context
}

message Rule {
  string id           = 1;
  string name         = 2;
  string version      = 3;
  string source       = 4;  // e.g., "Sigma", "YARA", "KQL"
  string type         = 5;  // e.g., "correlation", "behavioral", "signature"
  string query        = 6;  // rule query or pattern (if shareable)
  map<string,string> labels = 7;
}

message CloudMetadata {
  CloudProvider provider = 1;
  string account_id      = 2;
  string project_id      = 3;
  string organization_id = 4;
  string region          = 5;
  string zone            = 6;
  string instance_id     = 7;
  string instance_type   = 8;
  map<string,string> tags= 9;
}

message K8sMetadata {
  string cluster         = 1;
  string namespace       = 2;
  string pod             = 3;
  string container       = 4;
  string image           = 5;
  map<string,string> labels = 6;
  map<string,string> annotations = 7;
}

message ThreatIntelIndicator {
  IocType type                     = 1;
  string value                     = 2;
  string source                    = 3; // feed/provider name
  int32 score                      = 4; // 0..100
  string tlp                       = 5; // TLP:CLEAR/AMBER/...
  google.protobuf.Timestamp first_seen = 6;
  google.protobuf.Timestamp last_seen  = 7;
  map<string,string> metadata      = 8;
}

// -----------------------------------------------------------------------------
// Network evidences
// -----------------------------------------------------------------------------

message NetworkFlow {
  NetworkEndpoint src   = 1;
  NetworkEndpoint dst   = 2;
  IpProtocol protocol   = 3;
  Direction direction   = 4;
  uint64 bytes_sent     = 5;
  uint64 bytes_received = 6;
  uint64 packets_sent   = 7;
  uint64 packets_received = 8;
  google.protobuf.Duration duration = 9;
  google.protobuf.BoolValue tls     = 10;
  string community_id               = 11; // Zeek-style community ID if available
}

message Http {
  string method         = 1;
  uint32 status_code    = 2;
  string host           = 3;
  string url            = 4;
  string user_agent     = 5;
  map<string,string> request_headers  = 6;
  map<string,string> response_headers = 7;
}

message Dns {
  string qname          = 1;
  string qtype          = 2;
  repeated string answers = 3;
  google.protobuf.BoolValue malicious = 4;
}

message Tls {
  string sni            = 1;
  string ja3            = 2;
  string ja3s           = 3;
  string version        = 4; // e.g., "TLS1.2"
  repeated string alpn  = 5;
}

message NetworkEvidence {
  NetworkFlow flow      = 1;
  google.protobuf.Timestamp start_time = 2;
  google.protobuf.Timestamp end_time   = 3;

  // Optional protocol extensions; present if relevant to EventType.
  google.protobuf.BoolValue has_http   = 10;
  Http http                            = 11;

  google.protobuf.BoolValue has_dns    = 12;
  Dns dns                              = 13;

  google.protobuf.BoolValue has_tls    = 14;
  Tls tls                              = 15;
}

// -----------------------------------------------------------------------------
// Host evidences
// -----------------------------------------------------------------------------

message EndpointEvidence {
  ProcessInfo process         = 1;
  repeated FileInfo touched_files = 2;
  NetworkEndpoint host        = 3;  // host endpoint info (local machine)
}

message FileEvidence {
  FileInfo file               = 1;
  string operation            = 2; // e.g., "create", "write", "execute", "delete"
  ProcessInfo actor_process   = 3; // process that acted on file
}

message AuthEvidence {
  string username             = 1;
  string auth_type            = 2; // e.g., "password", "kerberos", "mfa"
  google.protobuf.BoolValue success = 3;
  string src_ip               = 4;
  string reason               = 5;
}

// -----------------------------------------------------------------------------
// Detection event & alert
// -----------------------------------------------------------------------------

message DetectionEvent {
  // Identity
  string event_id                         = 1;
  google.protobuf.Timestamp time          = 2;
  EventType event_type                    = 3;
  string tenant_id                        = 4;
  string sensor_id                        = 5;

  // Context
  Principal principal                     = 10;
  CloudMetadata cloud                     = 11;
  K8sMetadata k8s                         = 12;
  map<string,string> labels               = 13;
  google.protobuf.Struct attributes       = 14;

  // Evidence (oneof)
  oneof evidence {
    NetworkEvidence network               = 20;
    EndpointEvidence endpoint             = 21;
    FileEvidence file_ev                  = 22;
    AuthEvidence auth                     = 23;
  }

  // Enrichment
  repeated ThreatIntelIndicator ti_matches= 30;
  MitreAttack mitre                      = 31;

  // Outcome (if any real-time action was taken by a sensor)
  Verdict verdict                         = 40;
  Action action                           = 41;

  // Reserved for future expansion to keep field numbers stable
  reserved 50 to 59;
}

message Alert {
  string alert_id                          = 1;
  google.protobuf.Timestamp first_seen     = 2;
  google.protobuf.Timestamp last_seen      = 3;

  Severity severity                        = 4;
  Confidence confidence                    = 5;
  Verdict verdict                          = 6;
  Action action                            = 7;

  string title                             = 8;
  string description                       = 9;

  Rule rule                                = 10;
  MitreAttack mitre                        = 11;

  // Source detection that triggered the alert (optional, may be trimmed)
  DetectionEvent source_event              = 20;

  // Threat intel references combined at alert time
  repeated ThreatIntelIndicator ti_matches = 30;

  map<string,string> labels                = 40;
  google.protobuf.Struct attributes        = 41;

  reserved 60 to 69;
}

// -----------------------------------------------------------------------------
// Envelope for streaming/transport with explicit versioning
// -----------------------------------------------------------------------------

message Envelope {
  string schema        = 1;  // e.g., "cybersecurity.ids"
  string version       = 2;  // e.g., "1.0"

  oneof kind {
    DetectionEvent event = 10;
    Alert alert          = 11;
    ThreatIntelIndicator indicator = 12;
  }

  // Transport metadata (broker offsets, partition, etc.)
  map<string,string> transport = 20;
}
